--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,10 @@
 Package: vhatbfs
-Title: Implementazione degli Intervalli di Confidenza per i Dati RS
-Description: Implementazione delle formule dell'Ust per la stima degli intervalli di
-          confidenza con i dati RS. Si tratta principalmente di stimare degli intervalli
-          di confidenza di effettivi (stima della numerosità di una popolazione).
+Title: Implementation of Confidence Intervals for Swiss Structural Survey Data
+Description: Implementation of the FSO (Swiss Federal Statistical Office) 
+    formulas for estimating confidence intervals with Swiss 
+    Structrual Survey data. 
+    This mainly involves estimating confidence intervals of 
+    totals (estimating the numerosity of a population).
 Version: 0.0.2
 License: GPL-2
 Author: Gibo <gibo.gaf@gmail.com>
