--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,6 @@ Depends: R (>= 2.10)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
